logo and button complete - now add hover.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container"></div>
         <img src="images/logo.svg" alt="Huddle Logo">
-        <button span class="try-button">Try It Out!</button>
+        <button class="try-button">Try It Out!</button>
     </header>
 </body>
 </html>
