main content started.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         <img src="images/logo.svg" alt="Huddle Logo">
         <button class="try-button">Try It Out!</button>
     </header>
+    <!-- Content -->
+    <div class="main-page">
+        <h1>Build The Community Your Fans Will Love.</h1>
+    </div>
 </body>
 </html>
