--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Content -->
     <div class="main-page">
         <h1>Build The Community Your Fans Will Love.</h1>
+        <h2>Huddle re-imagines the way we build communities. You<br>
+        have a voice, but so does your audience. Create connections <br>
+        with your users as you engage in genuine discussion. </h2>
     </div>
 </body>
 </html>
