Call to action button with shadow - complete.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>This Is Huddle.</title>
+    <link rel="icon" href="images/favicon-32x32.png">
 </head>
 <body>
     <!-- Header -->
@@ -20,6 +21,9 @@
         <h2>Huddle re-imagines the way we build communities. You<br>
         have a voice, but so does your audience. Create connections <br>
         with your users as you engage in genuine discussion. </h2>
+        <!-- Join Button? -->
+        <button class="call-to-action">Get Started For Free.</button>
+
     </div>
 </body>
 </html>
