hover call to action added.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         with your users as you engage in genuine discussion. </h2>
         <!-- Join Button? -->
         <button class="call-to-action">Get Started For Free.</button>
+        <!-- Photo -->
+        <div class="screen-mockup">
+            <img src="images/screen-mockups.svg" alt="">
+        </div>
 
     </div>
+    
+    
 </body>
 </html>
